@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-01T01:52:59Z",
+  "timestamp" : "2022-11-01T08:21:54Z",
   "count_outdated" : 622,
   "uniques_outdated" : 357,
-  "count" : 661,
-  "uniques" : 375,
+  "count" : 662,
+  "uniques" : 376,
   "clones" : [
     {
       "timestamp": "2022-10-18T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-10-31T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
